@@ -5,6 +5,7 @@ qtsvg-opensource-src (5.0.2-3) UNRELEASED; urgency=low
     - Add the necessary indep build dependencies:
       * qttools5-dev-tools to use qhelpgenerator.
       * libqt5sql5-sqlite to generate qch doc.
+    - Build and create packages for qch and HTML doc formats.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 09 Jun 2013 14:31:17 -0300
 
